--- a/functions/test-db/json2/scvo/templates/pages/page-cjs-landing.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-cjs-landing.hbs
@@ -6,7 +6,7 @@
     </div>
     <div class="swiper-container">
         <div class="swiper-wrapper">
-            <div class="cta-content callout-image saltire swiper-slide">
+            <div class="cta-content callout-image benefit swiper-slide">
                 <div class="container-fluid">
                     <div class="caption">
                         <p>
