--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -817,15 +817,15 @@ figure {
             padding: 0;
             display: flex;
             align-items: baseline;
-            justify-content: center;
+            justify-content: flex-end;
             .caption {
                 text-align: center;
                 color: #fff;
                 font-weight: 600;
-                font-size: 1.25rem;
-                padding: 0.5rem 1rem;
+                font-size: 2.1rem;
+                padding: 1.5rem 3rem;
                 align-self: flex-end;
-                margin: 2.75rem 0;
+                margin: 0;
                 max-width: 65%;
             }
         }
@@ -1960,10 +1960,10 @@ table.membership-fees {
         margin-bottom: $unit;
     }
     .cjs-employers .mdc-card__media {
-        background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/.jpg');
+        background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/cafe.jpg');
     }
     .cjs-employees .mdc-card__media {
-        background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/.jpg');
+        background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/woodwork.jpg');
     }
     .cjs-vacancies .mdc-card__media {
         background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/hiring.jpg');
