hide filters not set up yet

--- a/functions/test-db/json2/scvo/templates/jobs/cjs-job-search.hbs
+++ b/functions/test-db/json2/scvo/templates/jobs/cjs-job-search.hbs
@@ -38,7 +38,7 @@
                                         <input type="text" class="mdc-textfield__input" name="q" id="jobs-keywords" placeholder="Keywords" value="{{params.query.q}}">
                                     </div>
                                 </div>
-                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+                                <!-- <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
                                     <div class="mdc-form-field">
                                         <label class="mdc-textfield__label" for="role">Role</label>
                                         <select class="mdc-select" role="listbox" id="jobs-role" name="role">
@@ -74,7 +74,7 @@
                                             {{/each}}
                                         </select>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                         <button class="mdc-button mdc-button--raised" type="submit">
