--- a/functions/test-db/json2/scvo/templates/jobs/cjs-job.hbs
+++ b/functions/test-db/json2/scvo/templates/jobs/cjs-job.hbs
@@ -1,29 +1,12 @@
 <div class="cjs-job">
-    <div class="splash-image splash-image-{{primaryResponse.hits.hits.[0]._type}}" style="{{> header_splash_image}}">
-        <div class="splash-overlay{{#if primaryResponse.hits.hits.[0]._source.hide_overlay}} splash-overlay-hidden{{/if}}">
-            <div class="container-fluid">
-                <div class="mdc-layout-grid">
-                    {{#if primaryResponse.hits.hits.[0]._source.header_text}}
-                    <img src="{{primaryResponse.hits.hits.[0]._source.header_text}}" alt="{{primaryResponse.hits.hits.[0]._source.title}}" class="header-text" />
-                    {{else}}
-                    <h1 class="header-text">
-                        <span class="header-text-banner">
-                            pagetitle
-                        </span>
-                    </h1>
-                    {{/if}}
-                </div>
-                {{> header_caption}}
-            </div>
-        </div>
-    </div>
+    {{> header_splash}}
     <div class="container-fluid page-content">
         <ul class="breadcrumbs">
             <li><a href="/">Home</a></li>
             <li><a href="/jobs">Jobs</a></li>
             <li><a href="/jobs/community-jobs-scotland">Community Jobs Scotland</a></li>
             <li><a href="/jobs/community-jobs-scotland/vacancies">Vacancies</a></li>
-            <li>pagetitle</li>
+            <li>{{primaryResponse.hits.hits.[0]._source.title}}</li>
         </ul>
 
         <div class="mdc-layout-grid">
@@ -84,13 +67,9 @@
                     </form>
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content v-margin">
-                    {{> search_info}}
 
-                    {{#each primaryResponse.hits.hits}}
-                    {{{_source.rendered.scvo_search_result}}}
-                    {{/each}}
+                    {{{primaryResponse.hits.hits.[0]._source.rendered.scvo_full}}}
 
-                    {{> pagination}}
                 </div>
             </div>
         </div>
