--- a/functions/test-db/json2/scvo/partials/search-info.hbs
+++ b/functions/test-db/json2/scvo/partials/search-info.hbs
@@ -4,11 +4,11 @@
     <strong>Current page:</strong> {{addCommas paging.currentPage}} of {{addCommas paging.totalPages}}
 </div>
 {{else}}
-{{#if params.query.q}}
+{{#ifAny params.query.region params.query.sector params.query.location params.query.job_number params.query.q}}
 <div class="search-info mdc-elevation--z1">
     No results, please try a different search query
 </div>
-{{/if}}
+{{/ifAny}}
 {{#compare params.path "===" "search"}}
 <h3>Trending topics</h3>
 <div class="mdc-layout-grid">
