--- a/functions/test-db/json2/scvo/templates/pages/page-cjs-landing.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-cjs-landing.hbs
@@ -10,10 +10,10 @@
                 <div class="container-fluid">
                     <div class="caption">
                         <p>
-                            8,000 young people employed
+                            Over 8,000 young people employed
                         </p>
                         <p>
-                            600 partner organisations
+                            Over 600 partner organisations
                         </p>
                     </div>
                 </div>
