--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -2288,6 +2288,7 @@ body.post.author {
     }
 }
 .cjs-job-search .inline-dl,
+.cjs-job .inline-dl,
 .staff-team .inline-dl {
     margin: 0;
     dt, dd {
@@ -2305,6 +2306,22 @@ body.post.author {
         ul {
             margin: 0 0 0 1.4rem;
         }
+    }
+}
+.inline-dl.span-2 {
+    column-count: 2;
+    dt {
+        width: 40%;
+    }
+    dd {
+        width: 60%;
+    }
+}
+.full.cjs-job {
+    hr,
+    h2,
+    h3 {
+        clear: both;
     }
 }
 .events .inline-dl {
