--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -2290,6 +2290,7 @@ body.post.author {
 .cjs-job-search .inline-dl,
 .cjs-job .inline-dl,
 .staff-team .inline-dl {
+    clear: both;
     margin: 0;
     dt, dd {
         float: left;
@@ -2309,6 +2310,7 @@ body.post.author {
     }
 }
 .inline-dl.span-2 {
+    clear: both;
     column-count: 2;
     dt {
         width: 40%;
