--- a/functions/test-db/json2/scvo/templates/jobs/cjs-job-search.hbs
+++ b/functions/test-db/json2/scvo/templates/jobs/cjs-job-search.hbs
@@ -24,54 +24,13 @@
             <li><a href="/jobs/community-jobs-scotland">Community Jobs Scotland</a></li>
             <li>Vacancies</li>
         </ul>
-
         <p class="v-margin-full">
             Please view the opportunities available but if you cannot see a CJS job that would suit your customer then please contact the CJS team at <a href="mailto:communityjobsscotland@scvo.org.uk">communityjobsscotland@scvo.org.uk</a> with details and we can try and arrange an another opportunity.
         </p>
-
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar page-sidebar">
-                    <h2 class="mdc-card__title mdc-card__title--large">Search vacancies</h2>
-                    <form action="/jobs/community-jobs-scotland/vacancies" method="GET" [searchroute]="'cjs_job_search'" data-auto-search="true">
-                        <div class="mdc-textfield mdc-textfield--upgraded">
-                            <label class="mdc-textfield__label" for="q">Keywords</label>
-                            <input type="text" class="mdc-textfield__input" name="q" id="jobs-keywords" placeholder="" value="{{params.query.q}}">
-                        </div>
-                        <div class="mdc-textfield mdc-textfield--upgraded">
-                            <label class="mdc-textfield__label" for="job_number">Job number</label>
-                            <input type="text" class="mdc-textfield__input" name="job_number" id="jobs-job_number" placeholder="" value="{{params.query.job_number}}">
-                        </div>
-                        <div class="mdc-textfield mdc-textfield--upgraded">
-                            <label class="mdc-textfield__label" for="location">Location</label>
-                            <input type="text" class="mdc-textfield__input" name="location" id="jobs-location" placeholder="" value="{{params.query.location}}">
-                        </div>
-                        <div class="mdc-form-field">
-                            <label class="mdc-textfield__label" for="sector">Sector</label>
-                            <select class="mdc-select" role="listbox" id="jobs-sector" name="sector">
-                                <option value="" {{#if params.query.sector}}{{else}}selected{{/if}}>Any sector</option>
-                                {{#each supplimentaryResponses.types.aggregations.sectors.buckets}}
-                                {{#if key}}
-                                <option value="{{key}}" {{#compare ../params.query.sector "===" key}}selected{{/compare}}>{{key}}</option>
-                                {{/if}}
-                                {{/each}}
-                            </select>
-                        </div>
-                        <div class="mdc-form-field">
-                            <label class="mdc-textfield__label" for="jobs-region">Region</label>
-                            <select class="mdc-select" role="listbox" id="region" name="region">
-                                <option value="" {{#if params.query.region}}{{else}}selected{{/if}}>Any region</option>
-                                {{#each supplimentaryResponses.types.aggregations.regions.buckets}}
-                                {{#if key}}
-                                <option value="{{key}}" {{#compare ../params.query.region "===" key}}selected{{/compare}}>{{key}}</option>
-                                {{/if}}
-                                {{/each}}
-                            </select>
-                        </div>
-                        <button class="mdc-button mdc-button--raised" type="submit">
-                            Search jobs
-                        </button>
-                    </form>
+                    {{> sidebar_cjs_search}}
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content v-margin">
                     {{#ifAny params.query.region params.query.sector params.query.location params.query.job_number params.query.q}}
