--- a/functions/test-db/json2/scvo/templates/jobs/cjs-job.hbs
+++ b/functions/test-db/json2/scvo/templates/jobs/cjs-job.hbs
@@ -8,68 +8,13 @@
             <li><a href="/jobs/community-jobs-scotland/vacancies">Vacancies</a></li>
             <li>{{primaryResponse.hits.hits.[0]._source.title}}</li>
         </ul>
-
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar page-sidebar">
-                    <h2 class="mdc-card__title mdc-card__title--large">Search vacancies</h2>
-                    <form action="/jobs/community-jobs-scotland/vacancies" method="GET" [searchroute]="'cjs_job_search'" data-auto-search="true">
-                        <div class="mdc-layout-grid">
-                            <div class="mdc-layout-grid__inner">
-                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-                                    <div class="mdc-textfield mdc-textfield--upgraded">
-                                        <label class="mdc-textfield__label" for="q">Keywords</label>
-                                        <input type="text" class="mdc-textfield__input" name="q" id="jobs-keywords" placeholder="Keywords" value="{{params.query.q}}">
-                                    </div>
-                                </div>
-                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-                                    <div class="mdc-form-field">
-                                        <label class="mdc-textfield__label" for="role">Role</label>
-                                        <select class="mdc-select" role="listbox" id="jobs-role" name="role">
-                                            <option value="" {{#if params.query.role}}{{else}}selected{{/if}}>Any role</option>
-                                            {{#each supplimentaryResponses.types.aggregations.roles.buckets}}
-                                            <option value="{{key}}" {{#compare ../params.query.role "===" key}}selected{{/compare}}>{{key}}</option>
-                                            {{/each}}
-                                        </select>
-                                    </div>
-                                </div>
-                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-                                    <div class="mdc-form-field">
-                                        <label class="mdc-textfield__label" for="sector">Sector</label>
-                                        <select class="mdc-select" role="listbox" id="jobs-sector" name="sector">
-                                            <option value="" {{#if params.query.sector}}{{else}}selected{{/if}}>Any sector</option>
-                                            {{#each supplimentaryResponses.types.aggregations.sectors.buckets}}
-                                            {{#if key}}
-                                            <option value="{{key}}" {{#compare ../params.query.sector "===" key}}selected{{/compare}}>{{key}}</option>
-                                            {{/if}}
-                                            {{/each}}
-                                        </select>
-                                    </div>
-                                </div>
-                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-                                    <div class="mdc-form-field">
-                                        <label class="mdc-textfield__label" for="jobs-region">Region</label>
-                                        <select class="mdc-select" role="listbox" id="region" name="region">
-                                            <option value="" {{#if params.query.region}}{{else}}selected{{/if}}>Any region</option>
-                                            {{#each supplimentaryResponses.types.aggregations.regions.buckets}}
-                                            {{#if key}}
-                                            <option value="{{key}}" {{#compare ../params.query.region "===" key}}selected{{/compare}}>{{key}}</option>
-                                            {{/if}}
-                                            {{/each}}
-                                        </select>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <button class="mdc-button mdc-button--raised" type="submit">
-                            Search jobs
-                        </button>
-                    </form>
+                    {{> sidebar_cjs_search}}
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content v-margin">
-
                     {{{primaryResponse.hits.hits.[0]._source.rendered.scvo_full}}}
-
                 </div>
             </div>
         </div>
