--- a/functions/test-db/json2/scvo/partials/search-info.hbs
+++ b/functions/test-db/json2/scvo/partials/search-info.hbs
@@ -4,7 +4,7 @@
     <strong>Current page:</strong> {{addCommas paging.currentPage}} of {{addCommas paging.totalPages}}
 </div>
 {{else}}
-{{#ifAny params.query.region params.query.sector params.query.location params.query.job_number params.query.q}}
+{{#ifAny phase params.query.region params.query.sector params.query.location params.query.job_number params.query.q}}
 <div class="search-info mdc-elevation--z1">
     No results, please try a different search query
 </div>
