--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -1011,6 +1011,9 @@ section.search {
 }
 
 .cjs-search-list {
+    h2 {
+        margin-top: $unit/4;
+    }
     .mdc-layout-grid__cell .list {
         column-count: 2;
     }
