--- a/functions/test-db/json2/scvo/templates/jobs/cjs-job-phase.hbs
+++ b/functions/test-db/json2/scvo/templates/jobs/cjs-job-phase.hbs
@@ -27,27 +27,38 @@
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone content page-content">
-                <h2>Are you aged between</h2>
+                    <p>
+                        Community Jobs Scotland (CJS) creates work opportunities for young unemployed people within third sector organisations throughout Scotland.
+                    </p>
+                    <p>
+                        CJS is targeted at more vulnerable young people and in particular, is focused on groups of young people who are more disadvantaged in the labour market.
+                    </p>
+                    <p>
+                        Start your search using the following links.
+                    </p>
 
-                <div class="mdc-layout-grid">
-                    <div class="mdc-layout-grid__inner">
-                        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-                            <h3><a href="/jobs/community-jobs-scotland/vacancies/p19v">16–29 year olds</a></h3>
-                            <p>
-                                The following vacancies are only open to vulnerable unemployed 16 to 29 year olds, including carers, early service leavers (armed forces), care experienced, disabled and young people with convictions who are not on the Work Programme, Work Choice, Specialist Employment Support, Work First Scotland or Work Able Scotland.
-                            </p>
-                        </div>
-                        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-                            <h3><a href="/jobs/community-jobs-scotland/vacancies/aag">16–19 years old on an Activity Agreement</a></h3>
-                            <p>
-                                The following vacancies are only open to unemployed 16 to 19 year olds who are currently participating on an Activity Agreement.
-                            </p>
-                        </div>
-                        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-                            <h3><a href="/jobs/community-jobs-scotland/vacancies/p52">16–29 year olds with a disability</a></h3>
-                            <p>
-                                The following vacancies are only open to unemployed 16 to 29 year olds who have a disability and or long term health condition and who are not on the Work Programme, Community Work Placement, Work Choice or Specialist Employment Support
-                            </p>
+                    <h2>Are you aged between</h2>
+
+                    <div class="mdc-layout-grid">
+                        <div class="mdc-layout-grid__inner">
+                            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+                                <h3><a href="/jobs/community-jobs-scotland/vacancies/p19v">16–29 year olds</a></h3>
+                                <p>
+                                    The following vacancies are only open to vulnerable unemployed 16 to 29 year olds, including <strong>carers</strong>, <strong>early service leavers (armed forces)</strong>, <strong>care experienced</strong>, <strong>disabled</strong> and <strong>young people with convictions</strong> who are not on the Work Programme, Work Choice, Specialist Employment Support, Work First Scotland or Work Able Scotland.
+                                </p>
+                            </div>
+                            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+                                <h3><a href="/jobs/community-jobs-scotland/vacancies/aag">16–19 years old on an Activity Agreement</a></h3>
+                                <p>
+                                    The following vacancies are only open to unemployed 16 to 19 year olds who are currently participating on an Activity Agreement.
+                                </p>
+                            </div>
+                            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+                                <h3><a href="/jobs/community-jobs-scotland/vacancies/p52">16–29 year olds with a disability</a></h3>
+                                <p>
+                                    The following vacancies are only open to unemployed 16 to 29 year olds who have a disability and or long term health condition and <strong>who are not</strong> on the Work Programme, Community Work Placement, Work Choice or Specialist Employment Support
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
