--- a/functions/test-db/json2/scvo/partials/sidebar-cjs-search.hbs
+++ b/functions/test-db/json2/scvo/partials/sidebar-cjs-search.hbs
@@ -1,6 +1,6 @@
 <h2 class="mdc-card__title mdc-card__title--large">Search vacancies</h2>
 <form action="/jobs/community-jobs-scotland/vacancies" method="GET" [searchroute]="'cjs_job_search'" data-auto-search="true">
-    <input type="hidden" name="phase" value="{{phase}}" />
+    <input type="hidden" name="phase" value="{{params.phase}}" />
     <div class="mdc-textfield mdc-textfield--upgraded">
         <label class="mdc-textfield__label" for="q">Keywords</label>
         <input type="text" class="mdc-textfield__input" name="q" id="jobs-keywords" placeholder="" value="{{params.query.q}}">
