--- a/functions/test-db/json2/scvo/templates/events/event-cjs.hbs
+++ b/functions/test-db/json2/scvo/templates/events/event-cjs.hbs
@@ -26,7 +26,7 @@
         </div> -->
         {{/with}}
 
-        <div class="mdc-layout-grid">
+        <div class="mdc-layout-grid related">
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
                     {{#compare supplimentaryResponses.related_events.hits.total ">" 0}}
