--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -3861,6 +3861,7 @@ button.swiper-pagination-bullet {
     }
     .sidebar,
     .related,
+    .footer-image,
     .breadcrumbs,
     .header-caption,
     .mdc-toolbar.mdc-toolbar--fixed,
