--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -831,7 +831,7 @@ figure {
             align-items: baseline;
             justify-content: flex-end;
             .caption {
-                text-align: center;
+                text-align: right;
                 color: #fff;
                 font-weight: 600;
                 font-size: 2.1rem;
