New Jobs landing

--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -1109,6 +1109,7 @@ section.search {
 .policy-research .latest-content .gist,
 .home .latest-content .gist,
 .digital .latest_content .gist,
+.jobs-landing .gist,
 .page-related .gist,
 .post-related .gist {
     box-shadow: none;
