New Jobs landing page

--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -899,6 +899,7 @@ section.search {
         }
     }
 }
+.jobs-landing .search_form .search-button-large,
 .mdc-card.search .search_form .search-button-large,
 .mdc-card-search .search_form .search-button-large {
     top: 0.35rem;
@@ -1133,6 +1134,21 @@ section.search {
     margin-top: 0;
     h3 {
         margin-top: 0;
+    }
+}
+.jobs-landing {
+    .page-content {
+        .mdc-layout-grid__inner {
+            margin: $unit/2 0;
+        }
+        .search {
+            ul {
+                list-style-type: none;
+                li {
+                    margin: $unit/2 0;
+                }
+            }
+        }
     }
 }
 
