--- a/functions/test-db/json2/scvo/templates/pages/page-jobs-landing.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-jobs-landing.hbs
@@ -25,10 +25,11 @@
                                     Try: <a href="/jobs/search?region=East+of+Scotland">East of Scotland</a>, <a href="/jobs/search?role=Management">Management</a>, <a href="/jobs/search?sector=Social+Care">Social Care</a>
                                 </p>
                                 <p>
-                                    <a href="https://goodmoves.com/recruiting">Advertise with us</a>
+                                    <a href="https://goodmoves.com/recruiting">Advertise with us <span class="far fa-external-link"></span></a>
                                 </p>
                             </div>
                             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet  mdc-layout-grid__cell--span-4-phone top-jobs">
+                                <h2>Top jobs</h2>
                                 {{#each supplimentaryResponses.goodmoves_latest.hits.hits}}
                                 {{{_source.rendered.gist}}}
                                 {{/each}}
@@ -50,6 +51,7 @@
                                 </ul>
                             </div>
                             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet  mdc-layout-grid__cell--span-4-phone top-jobs">
+                                <h2>Current vacancies</h2>
                                 {{#each supplimentaryResponses.cjs_latest.hits.hits}}
                                 {{{_source.rendered.scvo_gist}}}
                                 {{/each}}
