jobs landing fixes

--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -1141,6 +1141,9 @@ section.search {
         .mdc-layout-grid__inner {
             margin: $unit/2 0;
         }
+        .gist .mdc-layout-grid__inner {
+            margin: 0;
+        }
         .search {
             ul {
                 list-style-type: none;
