--- a/functions/test-db/json2/scvo/templates/pages/page-jobs-landing.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-jobs-landing.hbs
@@ -59,23 +59,16 @@
                         </div>
                     </div>
                 </div>
-                {{#compare supplimentaryResponses.related_events.hits.total ">" 3}}
+                {{#compare supplimentaryResponses.related_training.hits.total ">" 0}}
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 related page-related">
-                    <h3 class="blogs">Our training courses</h3>
+                    <h2>Our training courses</h2>
                     <div class="mdc-layout-grid">
                         <div class="mdc-layout-grid__inner">
+                            {{#each supplimentaryResponses.related_training.hits.hits}}
                             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet  mdc-layout-grid__cell--span-4-phone">
-                                {{{supplimentaryResponses.related_training.hits.hits.[0]._source.rendered.scvo_gist}}}
+                                {{{_source.rendered.scvo_gist}}}
                             </div>
-                            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet  mdc-layout-grid__cell--span-4-phone">
-                                {{{supplimentaryResponses.related_training.hits.hits.[1]._source.rendered.scvo_gist}}}
-                            </div>
-                            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet  mdc-layout-grid__cell--span-4-phone">
-                                {{{supplimentaryResponses.related_training.hits.hits.[2]._source.rendered.scvo_gist}}}
-                            </div>
-                            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet  mdc-layout-grid__cell--span-4-phone">
-                                {{{supplimentaryResponses.related_training.hits.hits.[3]._source.rendered.scvo_gist}}}
-                            </div>
+                            {{/each}}
                         </div>
                     </div>
                 </div>
