Funding updates improvements

--- a/functions/test-db/json2/scvo/templates/funding/funding-updates.hbs
+++ b/functions/test-db/json2/scvo/templates/funding/funding-updates.hbs
@@ -24,10 +24,10 @@
             <li>Funding update – {{momentFormat (moment (lastItem (split (atob params.range) "-")) "x") "Do MMMM YYYY"}}</li>
         </ul>
 
-        <!-- <h2>
-            Funding updates between {{momentFormat (moment (firstItem (split (atob params.range) "-")) "x") "Do MMMM"}} and
-            {{momentFormat (moment (lastItem (split (atob params.range) "-")) "x") "Do MMMM YYYY"}}
-        </h2> -->
+        <h3>Welcome to our new SCVO Members Bulletin funding search, courtesy of <a href="http://fundingscotland.com">Funding Scotland</a>.</h3>
+        <p>
+            Please find all the latest funding opportunities made available over the past two weeks below.
+        </p>
         <div class="mdc-layout-grid equal-height">
             <div class="mdc-layout-grid__inner">
                 {{#each primaryResponse.hits.hits}}
