--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -3881,6 +3881,7 @@ button.swiper-pagination-bullet {
     }
     .sidebar,
     .related,
+    .pagination,
     .footer-image,
     .breadcrumbs,
     .header-caption,
