--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -3251,6 +3251,9 @@ footer {
             font-size: 1rem;
         }
     }
+    footer .brand-logo {
+        text-align: center;
+    }
 }
 
 @media screen and (max-width: 395px) {
