Added CJS to search

--- a/functions/test-db/json2/scvo/templates/main_search/search.hbs
+++ b/functions/test-db/json2/scvo/templates/main_search/search.hbs
@@ -83,8 +83,9 @@
                         {{>filter_checkbox label="Organisations" value="goodhq-organisation"}}
                         {{>filter_checkbox label="Posts" value="goodhq-post"}}
 
-                        <h3>Goodmoves</h3>
-                        {{>filter_checkbox label="Jobs" value="goodmoves-job"}}
+                        <h3>Jobs</h3>
+                        {{>filter_checkbox label="Goodmoves jobs" value="goodmoves-job"}}
+                        {{>filter_checkbox label="CJS vacancies" value="cjs-job"}}
 
                         <h3>TFN</h3>
                         {{>filter_checkbox label="Blog posts" value="tfn-blog-post"}}
