--- a/functions/test-db/json2/scvo/templates/pages/page-jobs-landing.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-jobs-landing.hbs
@@ -42,12 +42,12 @@
                             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-4-tablet  mdc-layout-grid__cell--span-4-phone search">
                                 <h2>Creating jobs in Scotland's third sector for unemployed young people</h2>
                                 <p>
-                                    Community Jobs Scotland has worked with hundreds of third sector organisations to support over 8,000 unemployed young people into work.
+                                    Community Jobs Scotland works with hundreds of third sector organisations to support over 8,000 unemployed young people into work.
                                 </p>
                                 <ul>
                                     <li>Third sector employer? <a href="/jobs/community-jobs-scotland/information-for-employers">Find out how to get involved</a></li>
                                     <li>Aged 16-19? <a href="/jobs/community-jobs-scotland/information-for-employees">Find out hot to get employed through CJS</a></li>
-                                    <li>SDS or JCP employee? <a href="/jobs/community-jobs-scotland/vacancies">Access vacancy information</a></li>
+                                    <li>SDS or JCP employee? <a href="http://jobs.scvo.org.uk">Access vacancy information</a></li>
                                 </ul>
                             </div>
                             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet  mdc-layout-grid__cell--span-4-phone top-jobs">
