--- a/functions/test-db/json2/scvo/templates/funding/funding-updates-link-gen.hbs
+++ b/functions/test-db/json2/scvo/templates/funding/funding-updates-link-gen.hbs
@@ -24,10 +24,12 @@
             <li>Updates</li>
         </ul>
 
-        <h3>Welcome to our new SCVO Members Bulletin funding search, courtesy of <a href="http://fundingscotland.com">Funding Scotland</a>.</h3>
-        <p>
-            Simply enter your date range below and click 'Generate URL' to find the latest funding opportunities available.
-        </p>
+        <div class="v-margin-full">
+            <h3>Welcome to our new SCVO Members Bulletin funding search, courtesy of <a href="http://fundingscotland.com">Funding Scotland</a>.</h3>
+            <p>
+                Simply enter your date range below and click 'Generate URL' to find the latest funding opportunities available.
+            </p>
+        </div>
 
         <div class="mdc-layout-grid v-margin">
             <div class="mdc-layout-grid__inner">
