--- a/functions/test-db/json2/scvo/templates/funding/funding-updates.hbs
+++ b/functions/test-db/json2/scvo/templates/funding/funding-updates.hbs
@@ -24,10 +24,15 @@
             <li>Funding update – {{momentFormat (moment (lastItem (split (atob params.range) "-")) "x") "Do MMMM YYYY"}}</li>
         </ul>
 
-        <h3>Welcome to our new SCVO Members Bulletin funding search, courtesy of <a href="http://fundingscotland.com">Funding Scotland</a>.</h3>
-        <p>
-            Please find all the latest funding opportunities made available over the past two weeks below.
-        </p>
+        <div class="v-margin-full">
+            <h3>Welcome to our new SCVO Members Bulletin funding search, courtesy of <a href="http://fundingscotland.com">Funding Scotland</a>.</h3>
+            <p>
+                Please find all the latest funding opportunities made available over the past two weeks below.
+            </p>
+        </div>
+
+        <hr />
+
         <div class="mdc-layout-grid equal-height">
             <div class="mdc-layout-grid__inner">
                 {{#each primaryResponse.hits.hits}}
