--- a/functions/test-db/json2/scvo/templates/pages/home.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/home.hbs
@@ -77,7 +77,7 @@
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
                     <div class="mdc-card" style="background-color: rgba(0,0,0,0.5);">
-                        <section class="mdc-card__supporting-text" style="padding-top: 1.5rem; line-height: 1.6rem; font-size: 1.3rem; color:white;">
+                        <section class="mdc-card__supporting-text">
                             The Gathering is the largest free third sector event in the UK, a place for all the amazing people working in the third sector to network, showcase what they do and learn from each other.
                         </section>
                         <section class="mdc-card__actions">
@@ -118,7 +118,7 @@
                         </a>
                     </div>
                     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8 mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone">
-                        <p style="padding-top: 2.5rem; line-height: 1.6rem; font-size: 1.3rem;">
+                        <p style="padding-top: 2.5rem; line-height: 1.6rem; font-size: 1.25rem;">
                             Here at SCVO, we love charities. We believe every person who works to make a difference to Scottish communities should be valued, and that includes our colleagues who have come from other EU countries to live and work here. Scotland’s third sector is strengthened thanks to their contribution…
                             <a href="/projects-campaigns/europe-and-the-third-sector/eu-are-valued">Read more</a>
                         </p>
