--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -945,6 +945,12 @@ section.search {
             .post-info {
                 padding-bottom: $unit/2;
             }
+            .mdc-card__supporting-text {
+                padding-top: 1.25rem;
+                line-height: 1.55rem;
+                font-size: 1.25rem;
+                color: #fff;
+            }
         }
         .featured-text {
             padding: 0 0 $unit*2;
@@ -2937,8 +2943,13 @@ footer {
     a:hover {
         color: white;
     }
-    .mdc-list .mdc-list-item a:hover {
-        text-decoration: underline !important;
+    .mdc-list .mdc-list-item {
+        a {
+            font-size: 1rem;
+        }
+        a:hover {
+            text-decoration: underline !important;
+        }
     }
     .brand-logo {
         display: block;
