--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -945,12 +945,6 @@ section.search {
             .post-info {
                 padding-bottom: $unit/2;
             }
-            .mdc-card__supporting-text {
-                padding-top: 1.25rem;
-                line-height: 1.55rem;
-                font-size: 1.25rem;
-                color: #fff;
-            }
         }
         .featured-text {
             padding: 0 0 $unit*2;
@@ -963,7 +957,7 @@ section.search {
             p,
             .mdc-card__supporting-text {
                 font-size: 1.4rem;
-                letter-spacing: -0.05rem;
+                letter-spacing: -0.03rem;
             }
             h1,
             p,
@@ -975,6 +969,15 @@ section.search {
                 margin-right: 3rem;
                 max-width: 100%;
             }
+        }
+    }
+    .featured {
+        .mdc-card__supporting-text {
+            padding-top: $unit;
+            line-height: 1.55rem;
+            font-size: 1.25rem;
+            letter-spacing: -0.03rem;
+            color: #fff !important;
         }
     }
     .cta-content.callout-image {
