--- a/functions/test-db/json2/scvo/templates/jobs/cjs-job-search.hbs
+++ b/functions/test-db/json2/scvo/templates/jobs/cjs-job-search.hbs
@@ -62,6 +62,10 @@
                             </div>
                         </div>
                     </div>
+                    {{else}}
+                    <p>
+                        No vacancies in the selected category. Please check back soon.
+                    </p>
                     {{/if}}
 
                     {{> search_info}}
