--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -1049,7 +1049,7 @@ section.search {
 }
 .policy-research {
     .latest-content {
-        padding: $unit 0;
+        padding: 0;
     }
     .policy-stats {
         padding: $unit*1.5 0;
