--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -281,7 +281,7 @@ primary-dark: #251032
     .mdc-theme--primary-bg {
         background-color: map-get($themeSelected, 'primary') !important;
     }
-    .support .funding-scotland-platforms .mdc-card__primary {
+    .support.funding .mdc-card__primary {
         background-color: #006054 !important;
     }
     .support.support-policy .mdc-card__primary {
@@ -1963,9 +1963,6 @@ h1.mdc-typography--title {
             margin: $unit 0;
         }
     }
-}
-.support.funding .mdc-card {
-    margin: $unit 0;
 }
 .services .support .mdc-card__primary {
     height: $unit*2;
